# AETHERONUS

./: CMakeLists.txt  main.cpp  quick_run.bat
glad/include/glad/: glad.h
glad/src/: glad.c
include/aetheronus/: debug_renderer.hpp  marching_cubes_tables.hpp  math.hpp  meshing.hpp  morton.hpp  planet_scale.hpp  point_cloud.hpp  spaceship.hpp  topology.hpp
src/: debug_renderer.cpp  math.cpp  meshing.cpp  point_cloud.cpp  spaceship.cpp  topology.cpp
